== 0.0.2 2012-06-25

 * Support bulk alters.

== 0.0.1 2012-06-23

 * Hi.